--- a/ajith.html
+++ b/ajith.html
@@ -6,6 +6,6 @@
 </center>
 <hr>
 <center>
-  <link rel="stylesheet" href="img/ak.png">
+  <link rel="stylesheet" href="img src= ak.jpg">
  </center>
  
